some cleanup and corrections